--- a/partials/head.html
+++ b/partials/head.html
@@ -1,4 +1,4 @@
 <meta charset="UTF-8" />
-<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+<link rel="icon" type="image/svg+xml" href="/images/nj-icon-blue.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/src/style.css" />
