--- a/partials/head.html
+++ b/partials/head.html
@@ -2,3 +2,4 @@
 <link rel="icon" type="image/svg+xml" href="/images/nj-icon-blue.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/src/style.css" />
+<base href="/campaign/">
