--- a/partials/head.html
+++ b/partials/head.html
@@ -7,6 +7,7 @@
 <meta name="author" content="{{author}}">
 <meta name="robots" content="index,follow">
 <link rel="canonical" href="{{siteUrl}}{{canonical_path}}">
+<link rel="sitemap" type="application/xml" href="{{siteUrl}}sitemap.xml" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
@@ -32,7 +33,7 @@
 
 <!-- Mobile Theme -->
 <meta name="theme-color" content="#1e40af">
-<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
 <!-- Favicon -->
