footer form fix

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -60,7 +60,7 @@
                         </div>
 
                         <!-- Zip Code and Submit Row -->
-                        <div class="flex gap-2">
+                        <div class="flex flex-col gap-2">
                             <input type="text" id="hero-zipcode" name="zipcode" required placeholder="Zip"
                                 pattern="[0-9]{5}" maxlength="5"
                                 class="flex-1 px-3 py-2 border border-blue-800 rounded-md text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors text-sm bg-gray-50 focus:bg-white">
