--- a/partials/head.html
+++ b/partials/head.html
@@ -37,9 +37,9 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
 <!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="/images/nj-icon-blue.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/images/nj-icon-blue.png" />
-<link rel="apple-touch-icon" href="/images/nj-icon-blue.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/images/logo-cropped.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/images/logo-cropped.png" />
+<link rel="apple-touch-icon" href="/images/logo-cropped.png" />
 
 <!-- Stylesheet -->
 <link rel="stylesheet" href="/src/style.css" />
