--- a/partials/head.html
+++ b/partials/head.html
@@ -3,7 +3,7 @@
 
 <!-- SEO Meta Tags -->
 <meta name="description" content="{{description}}">
-<meta name="keywords" content="Anthony Colucci, Ward 1, Toms River, Council, Election 2025, New Jersey Politics, Local Government">
+<meta name="keywords" content="Lisa Bennett, Assembly District 9, Ocean County, Assembly, Election 2025, New Jersey Politics, State Government">
 <meta name="author" content="{{author}}">
 <meta name="robots" content="index,follow">
 <link rel="canonical" href="{{siteUrl}}{{canonical_path}}">
@@ -17,7 +17,7 @@
 <meta property="og:image" content="{{siteUrl}}images/social-headshot.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
-<meta property="og:image:alt" content="Anthony Colucci for Toms River Ward 1 Council">
+<meta property="og:image:alt" content="Lisa Bennett for New Jersey Assembly District 9">
 <meta property="og:site_name" content="{{candidateName}} for {{office}}">
 <meta property="og:locale" content="en_US">
 
@@ -27,9 +27,9 @@
 <meta name="twitter:title" content="{{title}}">
 <meta name="twitter:description" content="{{description}}">
 <meta name="twitter:image" content="{{siteUrl}}images/social-headshot.jpg">
-<meta name="twitter:image:alt" content="Anthony Colucci for Toms River Ward 1 Council">
-<meta name="twitter:creator" content="@ColucciWard1">
-<meta name="twitter:site" content="@ColucciWard1">
+<meta name="twitter:image:alt" content="Lisa Bennett for New Jersey Assembly District 9">
+<meta name="twitter:creator" content="@BennettLD9">
+<meta name="twitter:site" content="@BennettLD9">
 
 <!-- Mobile Theme -->
 <meta name="theme-color" content="#1e40af">
@@ -37,9 +37,9 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
 <!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="/images/logo-cropped.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/images/logo-cropped.png" />
-<link rel="apple-touch-icon" href="/images/logo-cropped.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/images/nj-icon-blue.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/images/nj-icon-blue.png" />
+<link rel="apple-touch-icon" href="/images/nj-icon-blue.png" />
 
 <!-- Stylesheet -->
 <link rel="stylesheet" href="/src/style.css" />
