--- a/partials/header.html
+++ b/partials/header.html
@@ -10,7 +10,7 @@
           <a href="./"
             class="flex items-center space-x-3 text-xl sm:text-2xl font-bold text-white hover:text-yellow-300 transition-colors drop-shadow-lg">
             <img src="/images/nj-icon-blue.png" alt="Bennett for Assembly Logo" class="h-8 sm:h-10 w-auto">
-            <span><span class="text-yellow-400">Bennett</span> for Assembly</span>
+            <span><span class="text-yellow-400">Bennett</span> for Assembly LD9</span>
           </a>
         </div>
 
