more CTA buttons

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -70,7 +70,7 @@
                                 d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
                         </svg>
                         <div>
-                            <p class="text-gray-300 text-sm sm:text-base">Hilliard Blvd. Manahawkin, NJ 08050</p>
+                            <p class="text-gray-300 text-sm sm:text-base">219 Hilliard Blvd. Manahawkin, NJ 08050</p>
                         </div>
                     </div>
                     <div class="flex items-center space-x-3">
